<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bar_first"
        android:icon="@drawable/ic_first_24dp"
        android:title="@string/first"
        android:contentDescription="@string/content_description_first"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bar_second"
        android:icon="@drawable/ic_second_24dp"
        android:title="@string/second"
        android:contentDescription="@string/content_description_second"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bar_third"
        android:title="@string/third"
        android:contentDescription="@string/content_description_third"
        app:showAsAction="never" />

</menu>